plugins {
    id 'java'
}

group 'com.kjipo'
version '0.1.0-SNAPSHOT'

sourceCompatibility = 1.9

compileJava {
    options.compilerArgs += ["--add-modules", "java.xml.bind"]
}


compileTestJava {
    options.compilerArgs += ["--add-modules", "java.xml.bind"]
}

test {
    jvmArgs += ["--add-modules", "java.xml.bind"]
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'javax.xml.bind:jaxb-api:2.3.0'
    compile 'com.sun.xml.bind:jaxb-core:2.3.0'
    compile 'com.sun.xml.bind:jaxb-impl:2.3.0'
    compile 'javax.activation:activation:1.1.1'
}
